fix dida bug on safari

--- a/src/pages/Module/Module.css
+++ b/src/pages/Module/Module.css
@@ -21,12 +21,17 @@
   display: flex;
 }
 
+.Module__object_caption_text_wrap{
+  display: flex;
+  align-items: center;
+}
+
 .Module__object_caption_text{
   flex-grow: 1; /* test dida */
   width: 0; /* test dida */
-  display: flex;
+  /* display: flex;
   flex-wrap: nowrap;
-  align-items: center;
+  align-items: center; */
   background-color: white;
   position: relative;
   z-index: 0;
@@ -170,7 +175,7 @@
   max-height: calc(100vh - var(--mobile-top) - var(--mobile-bottom) - var(--caption-height) );
   width: auto;
   max-width: 100%;
-  margin: auto;
+  /* margin: auto; */
 }
 
 .Module__objectCard{
@@ -346,6 +351,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center; /*test dida*/
   height: 100%;
   animation-duration: 2s!important;
 }
